<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home_item" />
        <item
            android:id="@+id/nav_rutas"
            android:icon="@drawable/ic_bus"
            android:title="@string/rutas_item" />
        <item
            android:id="@+id/nav_ubicacion"
            android:icon="@drawable/ic_person"
            android:title="@string/ubicacion_item" />
        <item
            android:id="@+id/nav_mapa"
            android:icon="@drawable/ic_map"
            android:title="@string/map_item" />

        <item android:id="@+id/configuration_section" android:title="@string/configuracion_item">
            <menu>
                <item android:id="@+id/nav_salir"
                    android:icon="@drawable/ic_exit"
                    android:title="@string/exit"/>
            </menu>
        </item>
    </group>

</menu>
